<resources>
    <string name="app_name">Animall</string>
    <string name="edit_text_hint_user_name"><font size="12">UserName/Phone/Email</font></string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="user_login">Login</string>
    <string name="seller_login">Login as Seller</string>
    <string name="register_new_user">Register New User</string>
    <string name="register_new_seller">Register New Seller</string>
    <string name="register">Register</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="checkNetworkConnection">please check internet connection</string>
    <string name="categories">Categories</string>
    <string name="myorders">My Orders</string>
    <string name="myprofile">My Profile</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="favorits">Favorites</string>
    <string name="complansandobjectives">Complans and Objectives</string>
    <string name="logout">Logout</string>
    <string name="shop_name">Shop Name</string>
    <string name="commercial_registration_No">Commercial Registration No</string>
    <string name="seller_name">Seller Name</string>
    <string name="address">Address</string>
    <string name="order_hotel">Order Hotel</string>
    <string name="animal_type">Animal Type:</string>
    <string name="animal_age">Animal age:</string>
    <string name="time_host">Hour host:</string>
    <string name="service">Available services:</string>
    <string name="day_host">Day Host:</string>
    <string name="vaccination">Vaccination</string>
    <string name="congrats">Congrats your order is</string>
    <string name="successfully">Successfully</string>
    <string name="send_sms">you will arrive message in your email</string>
    <string name="order_details">and phone about your order details</string>
    <string name="objection">open objection</string>
    <string name="follow_order">follow order</string>
    <string name="unmatched_product">unmatched Product</string>
    <string name="undelivered_product">undelivered Order</string>
    <string name="others">Others</string>
    <string name="send">send</string>
    <string name="by">By:</string>
    <string name="offer">Offer:</string>
    <string name="site">Site:</string>
    <string name="Hoteldeals">Hotel Deals</string>

</resources>
