<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opening_objection_or_Filowing_order.Opening_Objection">
    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:background="@drawable/pict_done_cloud_round_icons_vector_stencils_library_png_diagram_flowchart_example"
                android:layout_marginTop="90dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/congrats"
                android:fontFamily="@font/twomedium"
                android:layout_marginTop="45dp"
                android:textSize="32sp"
                android:textColor="@color/textcolor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/successfully"
                android:fontFamily="@font/twomedium"
                android:layout_marginTop="20dp"
                android:textSize="32sp"
                android:textColor="@color/textcolor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_sms"
                android:fontFamily="@font/twolight"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/sms_msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/order_details"
                android:fontFamily="@font/twolight"
                android:textSize="20sp"
                android:textColor="@color/sms_msg"/>
            <Button
                android:layout_width="250dp"
                android:layout_height="61.5dp"
                android:background="@drawable/btn_open_objection_background"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/objection"
                android:fontFamily="@font/twomedium"
                android:onClick="open_objection"/>
            <Button
                android:layout_width="250dp"
                android:layout_height="61.5dp"
                android:background="@drawable/btn_open_objection_background"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17.5dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/follow_order"
                android:fontFamily="@font/twomedium"/>
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/scroll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15.5dp"
                android:layout_marginTop="44.5dp"
                android:background="@drawable/ic_arrow_back_red"
                android:layout_alignParentEnd="true"
                android:onClick="GoBack"/>
            <TextView
                android:id="@+id/txt_open_objection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objection"
                android:textSize="20sp"
                android:textColor="@color/textcolor"
                android:fontFamily="@font/twomedium"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="79.5dp"/>
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_open_objection"
                android:layout_alignParentStart="true"
                android:layout_marginTop="140dp"
                android:layout_marginStart="30dp"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unmatched_product"
                    android:paddingStart="30dp"
                    android:textColor="@color/sms_msg"
                    android:textSize="20sp"
                    android:fontFamily="@font/twolight"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/undelivered_product"
                    android:paddingStart="30dp"
                    android:layout_marginTop="73dp"
                    android:textColor="@color/sms_msg"
                    android:textSize="20sp"
                    android:fontFamily="@font/twolight"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others"
                    android:paddingStart="30dp"
                    android:layout_marginTop="73dp"
                    android:textColor="@color/sms_msg"
                    android:textSize="20sp"
                    android:fontFamily="@font/twolight"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edit_open_objection"
                android:layout_width="256.5dp"
                android:layout_height="101dp"
                android:layout_below="@+id/radio_group"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_open_objection"/>
            <Button
                android:layout_width="284dp"
                android:layout_height="71dp"
                android:layout_below="@+id/edit_open_objection"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41.5dp"
                android:background="@drawable/btn_open_objection_background"
                android:fontFamily="@font/twomedium"
                android:text="@string/send"
                android:textSize="24sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>