<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".Authentication.Seller_Registration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_new_seller"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/shop_name"
                    android:hint="@string/shop_name"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/com_reg_no"
                    android:hint="@string/commercial_registration_No"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/seller_name"
                    android:hint="@string/seller_name"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/seller_phone"
                    android:hint="@string/phone"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/seller_email"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/seller_address"
                    android:hint="@string/address"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/seller_password"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/seller_password_confirmation"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/socialmedia_layout"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:layout_marginTop="40dp"
            android:onClick="make_registeration">

        </Button>
    </LinearLayout>

</ScrollView>