<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="46.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/animal"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="26.5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3345B4"
                android:text="Facebook"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EB4437"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="Google+"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"

            android:paddingBottom="15dp"
            android:backgroundTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/user_email"
                android:hint="@string/edit_text_hint_user_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingBottom="15dp"
                android:backgroundTint="@color/white">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:paddingBottom="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/user_password"
                android:hint="@string/password"
                android:textColorHint="@color/white"

                android:textColor="@color/white"
                android:inputType="textPassword"
                android:backgroundTint="@color/white">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/forgetpassword">

        </TextView>
        <View
            android:layout_width="120dp"
            android:layout_height="2px"
            android:background="@color/white"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/socialmedia_layout"
            android:textColor="@color/textcolor"
            android:text="@string/user_login"
            android:onClick="LoginUser"
            android:textSize="22sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_vender_register"
            android:textColor="@color/textcolor"
            android:text="@string/seller_login"
            android:textSize="22sp"
            android:onClick="go_to_seller_register"/>
        <TextView

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/register_new_user"
            android:onClick="go_to_user_register"
            android:layout_gravity="center_horizontal">

        </TextView>
        <View
            android:layout_width="200dp"
            android:layout_height="2px"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    </LinearLayout>
